--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,40 @@
-@import 'tailwindcss';
+.container{
+    justify-content: center;
+    align-items: center;
+    max-width: 400px;
+    height: fit-content;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #3d2a2a;
+    border-radius: 10px;
+}
+h2{
+    text-align: center;
+    color: white;
+    font-size: 42px;
+    margin-top: 0;
+}
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
+.add-task-input {
+    width: 300px;
+    height: 50px;
+    font-size: 18px;
+    padding: 10px 15px;   
+    border-radius: 15px;  
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    margin-right: 20px;
+}
 
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+.add-task-button {
+    width: 50px;
+    height:50px;
+    border-radius: 15px;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    padding: 10px 15px;
 }
