--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,17 +1,23 @@
-.container{
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Press+Start+2P&display=swap');
+
+.container {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     max-width: 400px;
-    height: fit-content;
     margin: 0 auto;
     padding: 20px;
-    background-color: #3d2a2a;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
     border-radius: 10px;
 }
-h2{
+
+h2 {
+    font-family:'Press Start 2P';
     text-align: center;
     color: white;
-    font-size: 42px;
+    font-size: 38px;
     margin-top: 0;
 }
 
@@ -19,8 +25,8 @@ h2{
     width: 300px;
     height: 50px;
     font-size: 18px;
-    padding: 10px 15px;   
-    border-radius: 15px;  
+    padding: 10px 15px;
+    border-radius: 15px;
     border: 1px solid #ccc;
     box-sizing: border-box;
     margin-bottom: 10px;
@@ -29,12 +35,86 @@ h2{
 
 .add-task-button {
     width: 50px;
-    height:50px;
+    height: 50px;
     border-radius: 15px;
     font-size: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border: 1px solid #ccc;
     box-sizing: border-box;
     margin-bottom: 10px;
     padding: 10px 15px;
 }
+
+.task-list {
+    width: 100%;
+    margin-top: 20px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    font-size: 20px;
+    font-family:sans-serif;
+}
+
+.task-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 400px;
+  width: 100%;
+  background-color: rgb(120, 120, 78);
+  border-radius: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+.task-item {
+  flex: 1; /* Takes all available space */
+  color: white;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  margin-right: 10px;
+  min-width: 0;
+}
+
+.task-actions {
+  display: flex;
+  gap: 8px;
+}
+
+.finish-btn,
+.delete-btn {
+  font-size: 18px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  color: white;
+}
+
+.finish-btn {
+  background-color: rgb(21, 171, 21);
+  padding: 6px 12px;
+}
+
+.delete-btn {
+  background-color: rgb(106, 24, 24);
+  padding: 6px 12px;
+}
+
+.completed {
+    text-decoration: line-through;
+    opacity: 0.7;
+}
+
+body {
+    background-color: rgb(177, 177, 125);
+}
+
+.add-task-button:hover,
+.finish-btn:hover,
+.delete-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+} 
